# hr-multiagent-rec

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: experiments.yaml
docs/: INDEX.md  PROJECT_STATUS.md
docs/api/: README.md
docs/architecture/: README.md  agent_upgrade.md  decisions.md  operations.md
docs/reproduce/: README.md
docs/thesis_materials/: README.md  algorithms.md  architecture_diagram.md  case_studies.md  case_studies_real.md  data_flow_diagram.md  defense_qa.md  experimental_setup.md  related_work_summary.md  results_snapshot.md
paper/: main.tex  refs.bib
paper/figures/: state_machine.mmd
paper/tables/: ablation.tex
scripts/: build_synthetic.py  demo.py  demo_async.py  make_architecture_diagram.py  make_figures.py  make_state_diagram.py  run_experiments.py  run_multiagent_only.py  summarize_ablation.py
src/hr_rec/: baselines.py  config.py  pipeline.py
src/hr_rec/agents/: __init__.py  async_orchestrator.py  base.py  candidate_analyst.py  coordinator.py  events.py  explainer.py  job_analyst.py  llm.py  llm_async.py  orchestrator.py  resilience.py  state.py
src/hr_rec/data/: loaders.py  schemas.py  synthetic.py
src/hr_rec/encoding/: embedder.py  indexer.py
src/hr_rec/evaluation/: metrics.py
src/hr_rec/matching/: reranker.py  scoring.py
src/hr_rec/utils/: async_facade.py
tests/e2e/: test_agents_real_llm.py  test_async_orchestrator_real_llm.py
tests/integration/: conftest.py  test_baselines.py  test_embedder.py  test_indexer.py
tests/unit/: test_async_orchestrator_logic.py  test_coord_state.py  test_llm_json.py  test_metrics.py  test_schemas.py  test_scoring.py  test_synthetic.py  test_usage_and_resilience.py
