[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-multiagent-rec"
version = "0.1.0"
description = "A multi-agent recommendation and optimization framework for large-scale human-resource semantic modeling."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Lu Zikai", email = "CleopatraDownsgwk@geologist.com" }]
keywords = ["person-job-fit", "multi-agent", "recommendation", "semantic-matching", "llm", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sentence-transformers>=3.0.0",
    "transformers>=4.44.0",
    "torch>=2.3.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0,<2.3.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
agents = [
    "crewai>=0.80.0",
    "litellm>=1.50.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "hypothesis>=6.108.0",
]
viz = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
    "streamlit>=1.36.0",
]

[project.urls]
Homepage = "https://github.com/TsekaLuk/hr-multiagent-rec"
Repository = "https://github.com/TsekaLuk/hr-multiagent-rec"
Issues = "https://github.com/TsekaLuk/hr-multiagent-rec/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "unit: fast pure-logic tests, no network or model loading",
    "integration: load real models, may be slow",
    "e2e: end-to-end pipeline, requires API key",
    "slow: > 5s",
    "gpu: requires CUDA/MPS",
]
asyncio_mode = "auto"
timeout = 120

[tool.coverage.run]
source = ["src/hr_rec"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
